--- a/FIND-E/app/src/main/res/values/strings.xml
+++ b/FIND-E/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="unknown">unknown</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
     <string name="unknown_device">Unknown device</string>
+
+    <string name="location.dialog.settings">Settings</string>
+    <string name="location.dialog.title">GPS turned off</string>
+    <string name="location.dialog.text">Please turn on your GPS</string>
 </resources>
